# ohos_http

./: .metadata  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  pubspec.yaml
lib/: ohos_http.dart
lib/src/: native_http_api_ohos.g.dart  ohos_http_client.dart  ohos_http_ffi_bindings.dart  ohos_http_ffi_runtime.dart  ohos_multipart_request.dart  request_id_generator.dart
ohos/: .gitignore  build-profile.json5  index.ets  oh-package.json5
ohos/libs/arm64-v8a/: libcurl.so.4.8.0  libnghttp2.so.14  libzstd.so.1
ohos/src/main/: module.json5
ohos/src/main/cpp/: CMakeLists.txt  ohos_http_ffi.cpp
ohos/src/main/ets/components/plugin/: NativeHttpApiImpl.ets  NativeHttpApiOhos.g.ets  NativeHttpRequestWorker.ets  NativeHttpRequestWorkerModels.ets  NativeMultipartUploadWorker.ets  NativeMultipartUploadWorkerModels.ets  OhosHttpFfiBootstrap.ets  OhosHttpPlugin.ets  URLSessionManager.ets
pigeon/: native_http_api_ohos.dart
test/: ohos_http_client_test.dart  ohos_multipart_request_test.dart  request_id_generator_test.dart
